# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
-import { Router, type IRouter } from "express";
+import { Router } from "express";
 import healthRouter from "./health";
 
-const router: IRouter = Router();
+const router = Router();
 
 router.use(healthRouter);
+
+router.use("/healthz", healthRouter);
 
 export default router;
